Fix issue pop up bottom on mobile

--- a/css/presets/style2.css
+++ b/css/presets/style2.css
@@ -347,8 +347,8 @@ ul.vmmanufacturer li {
 
 #img_Leaves {
 	position:absolute;
-    top: 3px;
-    left: 3px;
+    top: 0;
+    left: 0;
 	z-index: 5;
 }
 
